--- a/index.html
+++ b/index.html
@@ -300,62 +300,57 @@
         <div class="footer-bottom"><span>Copyright &copy; 2026 Rahma Islamic Centre. All rights reserved.</span><span>Powered by Devodez Solutions</span></div>
     </div></footer>
     <script src="shared.js"></script>
-    
     <script>
-    /* ── Prayer times on homepage via Mawaqit → Aladhan fallback ── */
-    (async function loadHomePrayer() {
-        var T = null;
-        try {
-            var r = await fetch('https://mawaqit.net/api/2.0/mosque/by-slug/rahma-islamic-centre-winnipeg/prayer-times');
-            if (r.ok) {
-                var d = await r.json();
-                if (d.times && d.times.length >= 6)
-                    T = { fajr:d.times[0], dhuhr:d.times[2], asr:d.times[3], maghrib:d.times[4], isha:d.times[5] };
-            }
-        } catch(e) {}
-        if (!T) {
+    /* ══ PRAYER TIMES — Mawaqit primary, Aladhan fallback ══
+       Appelé dans DOMContentLoaded pour que le DOM soit prêt. */
+    function fmt12(raw) {
+        var t = (raw||'').split(' ')[0].split(':');
+        var h = parseInt(t[0]||0), m = t[1]||'00', ap = h>=12?'PM':'AM';
+        return (h%12||12)+':'+m+' '+ap;
+    }
+    window.addEventListener('DOMContentLoaded', function() {
+        (async function() {
+            var T = null;
+            /* 1. Mawaqit */
             try {
-                var now = new Date();
-                var url = 'https://api.aladhan.com/v1/timings/' + now.getDate() + '-' + (now.getMonth()+1) + '-' + now.getFullYear() + '?latitude=49.8951&longitude=-97.1384&method=2';
-                var res = await fetch(url);
-                var data = await res.json();
-                if (data.code === 200) {
-                    var ti = data.data.timings;
-                    T = { fajr:ti.Fajr, dhuhr:ti.Dhuhr, asr:ti.Asr, maghrib:ti.Maghrib, isha:ti.Isha };
-                }
-            } catch(e) {}
-        }
-        if (!T) T = { fajr:'05:30', dhuhr:'12:45', asr:'15:30', maghrib:'18:15', isha:'19:45' };
-        function fmt(raw) {
-            var t = raw.split(' ')[0].split(':');
-            var h = parseInt(t[0]), m = t[1], ap = h >= 12 ? 'PM' : 'AM';
-            return (h%12||12) + ':' + m + ' ' + ap;
-        }
-        var ids = { fajr:'fajr-time', dhuhr:'dhuhr-time', asr:'asr-time', maghrib:'maghrib-time', isha:'isha-time' };
-        var cardIds = { fajr:'card-fajr', dhuhr:'card-dhuhr', asr:'card-asr', maghrib:'card-maghrib', isha:'card-isha' };
-        var nm = new Date().getHours()*60 + new Date().getMinutes(), active = 'card-isha';
-        Object.keys(T).forEach(function(k) {
-            var el = document.getElementById(ids[k]);
-            if (el) el.textContent = fmt(T[k]);
-            var parts = T[k].split(':').map(Number);
-            if (nm >= parts[0]*60+parts[1]) active = cardIds[k];
-        });
-        Object.values(cardIds).forEach(function(id) {
-            var c = document.getElementById(id);
-            if (c) c.classList.toggle('active-prayer', id === active);
-        });
-    })();
-    </script>
-    <script>
+                var r = await fetch('https://mawaqit.net/api/2.0/mosque/by-slug/rahma-islamic-centre-winnipeg/prayer-times');
+                if (r.ok) { var d=await r.json(); if(d.times&&d.times.length>=6)
+                    T={fajr:d.times[0],dhuhr:d.times[2],asr:d.times[3],maghrib:d.times[4],isha:d.times[5],src:'mawaqit'}; }
+            } catch(e){}
+            /* 2. Aladhan */
+            if (!T) { try {
+                var now=new Date(), url='https://api.aladhan.com/v1/timings/'+now.getDate()+'-'+(now.getMonth()+1)+'-'+now.getFullYear()+'?latitude=49.8951&longitude=-97.1384&method=2';
+                var res=await fetch(url), data=await res.json();
+                if(data.code===200){var ti=data.data.timings; T={fajr:ti.Fajr,dhuhr:ti.Dhuhr,asr:ti.Asr,maghrib:ti.Maghrib,isha:ti.Isha,src:'aladhan'};}
+            } catch(e){} }
+            /* 3. Static */
+            if (!T) T={fajr:'05:30',dhuhr:'12:45',asr:'15:30',maghrib:'18:15',isha:'19:45',src:'static'};
+
+            var ids={fajr:'fajr-time',dhuhr:'dhuhr-time',asr:'asr-time',maghrib:'maghrib-time',isha:'isha-time'};
+            var cards={fajr:'card-fajr',dhuhr:'card-dhuhr',asr:'card-asr',maghrib:'card-maghrib',isha:'card-isha'};
+            var nm=new Date().getHours()*60+new Date().getMinutes(), active='card-isha';
+            ['fajr','dhuhr','asr','maghrib','isha'].forEach(function(k){
+                var el=document.getElementById(ids[k]);
+                if(el) el.textContent=fmt12(T[k]);
+                var p=(T[k]||'0:0').split(':').map(Number);
+                if(nm>=p[0]*60+p[1]) active=cards[k];
+            });
+            Object.values(cards).forEach(function(id){
+                var c=document.getElementById(id); if(c) c.classList.toggle('active-prayer',id===active);
+            });
+        })();
+
         /* Animated counters */
-        function animateCount(el,target){var s=performance.now();(function u(n){var p=Math.min((n-s)/1500,1),e=1-Math.pow(1-p,3);el.textContent=Math.round(e*target);if(p<1)requestAnimationFrame(u);})()}
-        var sObs=new IntersectionObserver(function(entries){entries.forEach(function(e){if(e.isIntersecting){animateCount(e.target,parseInt(e.target.dataset.target));sObs.unobserve(e.target);}})},{threshold:0.5});
+        function animateCount(el,target){var s=performance.now();(function u(n){var p=Math.min((n-s)/1500,1),e=1-Math.pow(1-p,3);el.textContent=Math.round(e*target);if(p<1)requestAnimationFrame(u);})();}
+        var sObs=new IntersectionObserver(function(entries){entries.forEach(function(e){if(e.isIntersecting){animateCount(e.target,parseInt(e.target.dataset.target));sObs.unobserve(e.target);}});},{threshold:0.5});
         document.querySelectorAll('[data-target]').forEach(function(el){sObs.observe(el);});
-        /* Donate widget */
-        var currentCurrency='CAD';
-        function setAmount(val,el){document.getElementById('donateAmt').value=val;document.querySelectorAll('.amount-pill').forEach(function(p){p.classList.remove('selected');});el.classList.add('selected');}
-        function setCurrency(cur){currentCurrency=cur;document.getElementById('currencyTag').textContent=cur;['CAD','USD'].forEach(function(c){var b=document.getElementById('btn'+c);b.style.background=c===cur?'rgba(201,168,76,0.15)':'transparent';b.style.borderColor=c===cur?'var(--gold)':'rgba(255,255,255,0.15)';b.style.color=c===cur?'var(--gold)':'rgba(255,255,255,0.5)';}); }
-        function processDonate(){var amt=parseFloat(document.getElementById('donateAmt').value);if(!amt||amt<=0){alert('Please enter a valid amount.');return;}alert('Thank you! '+currentCurrency+' $'+amt.toFixed(2)+'\nContact: rahmaislamiccentre@gmail.com');}
+    });
+
+    /* Donate widget */
+    var currentCurrency='CAD';
+    function setAmount(val,el){document.getElementById('donateAmt').value=val;document.querySelectorAll('.amount-pill').forEach(function(p){p.classList.remove('selected');});el.classList.add('selected');}
+    function setCurrency(cur){currentCurrency=cur;document.getElementById('currencyTag').textContent=cur;['CAD','USD'].forEach(function(c){var b=document.getElementById('btn'+c);b.style.background=c===cur?'rgba(201,168,76,0.15)':'transparent';b.style.borderColor=c===cur?'var(--gold)':'rgba(255,255,255,0.15)';b.style.color=c===cur?'var(--gold)':'rgba(255,255,255,0.5)';});}
+    function processDonate(){var amt=parseFloat(document.getElementById('donateAmt').value);if(!amt||amt<=0){alert('Please enter a valid amount.');return;}alert('Thank you! '+currentCurrency+' $'+amt.toFixed(2)+'\nContact: rahmaislamiccentre@gmail.com');}
     </script>
 </body>
 </html>
