--- a/newsletter.html
+++ b/newsletter.html
@@ -284,9 +284,11 @@
             var btn = document.getElementById('nlBtn');
             btn.textContent = 'Subscribing…'; btn.disabled = true;
             setTimeout(function() {
-                btn.textContent = '✓ You're Subscribed!'; btn.classList.add('success');
-                setTimeout(function() { btn.textContent='Subscribe Now →'; btn.classList.remove('success'); btn.disabled=false; e.target.reset(); }, 3000);
-            }, 1200);
+                btn.textContent = '✓ You're Subbtn.textContent='Subscribing…'; btn.disabled=true;
+            setTimeout(function(){
+                btn.textContent='✓ You\'re Subscribed!'; btn.classList.add('success');
+                setTimeout(function(){btn.textContent='Subscribe Now →';btn.classList.remove('success');btn.disabled=false;e.target.reset();},3000);
+            },1200);
         });
     </script>
 </body>
