--- a/prayer-times.html
+++ b/prayer-times.html
@@ -46,7 +46,7 @@
         .jumuah-box h3 { font-family: 'Cinzel', serif; font-size: 1rem; color: var(--gold); letter-spacing: 0.1em; margin-bottom: 8px; }
         .jumuah-box p { font-size: 0.92rem; color: rgba(255,255,255,0.72); line-height: 1.65; }
         .jumuah-pills { display: flex; gap: 12px; margin-top: 10px; flex-wrap: wrap; }
-        .jumuah-pill { background: var(--gold); color: var(--navy); padding: 6px 18px; font-family: 'Cinzel', serif; font-size: 0.9rem; font-weight: 700; }
+        .jumuah-pill { background: var(--gold); color: var(--navy); padding: 10px 24px; font-family: 'Cormorant Garamond', serif; font-size: 1.9rem; font-weight: 600; }
 
         .fnote { margin-top: 16px; font-size: 0.73rem; color: rgba(255,255,255,0.26); text-align: center; letter-spacing: 0.04em; }
         .fnote a { color: var(--gold); text-decoration: none; }
@@ -202,38 +202,33 @@
     <script src="shared.js"></script>
     <script>
 /* ─── LIVE CLOCK ─── */
-(function tick() {
-    document.getElementById('todayClock').textContent = new Date().toLocaleTimeString('en-US', {hour:'2-digit',minute:'2-digit',hour12:true});
-    setTimeout(tick, 1000);
+(function tick(){
+    document.getElementById('todayClock').textContent=new Date().toLocaleTimeString('en-US',{hour:'2-digit',minute:'2-digit',hour12:true});
+    setTimeout(tick,1000);
 })();
-document.getElementById('todayDate').textContent = new Date().toLocaleDateString('en-US', {weekday:'long',year:'numeric',month:'long',day:'numeric'});
+document.getElementById('todayDate').textContent=new Date().toLocaleDateString('en-US',{weekday:'long',year:'numeric',month:'long',day:'numeric'});
 
-function addM(t, m) {
-    var p=t.split(':').map(Number), tot=p[0]*60+p[1]+m;
-    return String(Math.floor(tot/60)%24).padStart(2,'0')+':'+String(tot%60).padStart(2,'0');
-}
+function addM(t,m){var p=t.split(':').map(Number),tot=p[0]*60+p[1]+m;return String(Math.floor(tot/60)%24).padStart(2,'0')+':'+String(tot%60).padStart(2,'0');}
 
 /* ─── LOAD TODAY — Mawaqit primary, Aladhan fallback ─── */
-async function loadToday() {
-    var T = null;
-    try {
-        var r = await fetch('https://mawaqit.net/api/2.0/mosque/by-slug/rahma-islamic-centre-winnipeg/prayer-times');
-        if (r.ok) {
-            var d = await r.json();
-            if (d.times && d.times.length >= 6)
-                T = { Fajr:d.times[0], Dhuhr:d.times[2], Asr:d.times[3], Maghrib:d.times[4], Isha:d.times[5], _src:'mawaqit' };
-        }
-    } catch(e) {}
-    if (!T) {
-        try {
-            var now=new Date(), url='https://api.aladhan.com/v1/timings/'+now.getDate()+'-'+(now.getMonth()+1)+'-'+now.getFullYear()+'?latitude=49.8951&longitude=-97.1384&method=2';
-            var res=await fetch(url), data=await res.json();
-            if (data.code===200) T = Object.assign({_src:'aladhan'}, data.data.timings);
-        } catch(e) {}
-    }
-    if (!T) T = {Fajr:'05:30',Dhuhr:'12:45',Asr:'15:30',Maghrib:'18:15',Isha:'19:45',_src:'static'};
-    var colors={mawaqit:'#4ade80',aladhan:'#fbbf24',static:'#9ca3af'}, labels={mawaqit:'Mawaqit ✓',aladhan:'Aladhan API',static:'Static'};
+async function loadToday(){
+    var T=null;
+    try{
+        var r=await fetch('https://mawaqit.net/api/2.0/mosque/by-slug/rahma-islamic-centre-winnipeg/prayer-times');
+        if(r.ok){var d=await r.json();if(d.times&&d.times.length>=6)
+            T={Fajr:d.times[0],Dhuhr:d.times[2],Asr:d.times[3],Maghrib:d.times[4],Isha:d.times[5],_src:'mawaqit'};}
+    }catch(e){}
+    if(!T){try{
+        var now=new Date(),url='https://api.aladhan.com/v1/timings/'+now.getDate()+'-'+(now.getMonth()+1)+'-'+now.getFullYear()+'?latitude=49.8951&longitude=-97.1384&method=2';
+        var res=await fetch(url),data=await res.json();
+        if(data.code===200) T=Object.assign({_src:'aladhan'},data.data.timings);
+    }catch(e){}}
+    if(!T) T={Fajr:'05:30',Dhuhr:'12:45',Asr:'15:30',Maghrib:'18:15',Isha:'19:45',_src:'static'};
+
+    var colors={mawaqit:'#4ade80',aladhan:'#fbbf24',static:'#9ca3af'};
+    var labels={mawaqit:'Mawaqit ✓',aladhan:'Aladhan API',static:'Static'};
     document.getElementById('apiBadge').innerHTML='<span style="display:inline-block;width:8px;height:8px;border-radius:50%;background:'+colors[T._src]+'"></span>&nbsp;'+labels[T._src];
+
     var prayers=[
         {key:'Fajr',   id:'t-fajr',   card:'tp-fajr',   iq:'iq-fajr',   off:20},
         {key:'Dhuhr',  id:'t-dhuhr',  card:'tp-dhuhr',  iq:'iq-dhuhr',  off:20},
@@ -241,54 +236,54 @@ async function loadToday() {
         {key:'Maghrib',id:'t-maghrib',card:'tp-maghrib',iq:'iq-maghrib',off:5},
         {key:'Isha',   id:'t-isha',   card:'tp-isha',   iq:'iq-isha',   off:15},
     ];
-    var nm=new Date().getHours()*60+new Date().getMinutes(), active='tp-isha';
-    prayers.forEach(function(p) {
-        if (!T[p.key]) return;
+    var nm=new Date().getHours()*60+new Date().getMinutes(),active='tp-isha';
+    prayers.forEach(function(p){
+        if(!T[p.key])return;
         var el=document.getElementById(p.id);
-        if (el) { el.textContent=formatTime(T[p.key]); el.classList.remove('loading'); }
+        if(el){el.textContent=formatTime(T[p.key]);el.classList.remove('loading');}
         var iq=document.getElementById(p.iq);
-        if (iq) iq.textContent='Iqamah: '+formatTime(addM(T[p.key],p.off));
+        if(iq) iq.textContent='Iqamah: '+formatTime(addM(T[p.key],p.off));
         var parts=T[p.key].split(':').map(Number);
-        if (nm>=parts[0]*60+parts[1]) active=p.card;
+        if(nm>=parts[0]*60+parts[1]) active=p.card;
     });
-    prayers.forEach(function(p) {
+    prayers.forEach(function(p){
         var c=document.getElementById(p.card);
-        if (c) c.classList.toggle('active-prayer', p.card===active);
+        if(c) c.classList.toggle('active-prayer',p.card===active);
     });
 }
 
 /* ─── MONTHLY TABLE ─── */
-async function loadMonth() {
-    var mo=parseInt(document.getElementById('monthPicker').value), yr=new Date().getFullYear();
+async function loadMonth(){
+    var mo=parseInt(document.getElementById('monthPicker').value),yr=new Date().getFullYear();
     var MONTHS=['','January','February','March','April','May','June','July','August','September','October','November','December'];
     var tbl=document.getElementById('prayerTable');
     tbl.innerHTML='<tbody><tr><td colspan="7" style="padding:36px;text-align:center;color:var(--muted)"><i class="fas fa-spinner fa-spin" style="color:var(--gold);font-size:1.3rem;display:block;margin-bottom:10px"></i>Loading…</td></tr></tbody>';
-    try {
+    try{
         var r=await fetch('https://api.aladhan.com/v1/calendar/'+yr+'/'+mo+'?latitude=49.8951&longitude=-97.1384&method=2');
         var data=await r.json();
-        if (data.code!==200) throw new Error('bad');
-        var today=new Date(), td=today.getDate(), tm=today.getMonth()+1, ty=today.getFullYear();
+        if(data.code!==200) throw new Error();
+        var today=new Date(),td=today.getDate(),tm=today.getMonth()+1,ty=today.getFullYear();
         var h='<thead><tr class="month-row"><th colspan="7">'+MONTHS[mo]+' '+yr+'</th></tr><tr><th>Date</th><th>Day</th><th>Fajr</th><th>Dhuhr / Jumu'ah</th><th>Asr</th><th>Maghrib</th><th>Isha</th></tr></thead><tbody>';
-        data.data.forEach(function(day) {
-            var g=day.date.gregorian, ti=day.timings;
+        data.data.forEach(function(day){
+            var g=day.date.gregorian,ti=day.timings;
             var fri=g.weekday.en==='Friday';
-            var isToday=parseInt(g.day)===td && mo===tm && parseInt(g.year)===ty;
+            var isToday=parseInt(g.day)===td&&mo===tm&&parseInt(g.year)===ty;
             var cls=isToday?'today-row':fri?'friday-row':'';
             var dhuhr=fri?'<span style="color:var(--gold);font-weight:700">Jumu'ah<br><small style="font-weight:400;opacity:.8">12:30 / 1:20 PM</small></span>':formatTime(ti.Dhuhr);
             h+='<tr class="'+cls+'"><td><strong>'+g.day+'</strong></td><td>'+g.weekday.en.slice(0,3)+'</td><td>'+formatTime(ti.Fajr)+'</td><td>'+dhuhr+'</td><td>'+formatTime(ti.Asr)+'</td><td>'+formatTime(ti.Maghrib)+'</td><td>'+formatTime(ti.Isha)+'</td></tr>';
         });
         h+='</tbody><tfoot><tr><td colspan="7"><strong>Jumu'ah</strong> @ Chalmers Community Centre — 480 Chalmers Ave &nbsp;|&nbsp; <strong style="color:var(--gold)">12:30 PM &amp; 1:20 PM</strong></td></tr></tfoot>';
         tbl.innerHTML=h;
-    } catch(e) {
-        tbl.innerHTML='<tbody><tr><td colspan="7" style="padding:30px;text-align:center;color:var(--muted)">Unable to load schedule. Please check your connection.</td></tr></tbody>';
+    }catch(e){
+        tbl.innerHTML='<tbody><tr><td colspan="7" style="padding:30px;text-align:center;color:var(--muted)">Unable to load schedule.</td></tr></tbody>';
     }
 }
 
-window.addEventListener('DOMContentLoaded', function() {
-    document.getElementById('monthPicker').value = new Date().getMonth()+1;
+window.addEventListener('DOMContentLoaded',function(){
+    document.getElementById('monthPicker').value=new Date().getMonth()+1;
     loadToday();
     loadMonth();
-    document.getElementById('monthPicker').addEventListener('change', loadMonth);
+    document.getElementById('monthPicker').addEventListener('change',loadMonth);
 });
 </script>
 </body>
